--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="name_input_field">Name</string>
     <string name="sign_in_btn_text">Log in</string>
     <string name="greet">Hello %s</string>
+    <string name="purchases_greet">Transaction %s</string>
     <string name="delete_btn">Delete</string>
+    <string name="add_products">Add</string>
     <string name="total_spent_amount">Total spent amount</string>
+    <string name="total_products_for_transaction">Products:</string>
+    <string name="Purchases_page_label">Purchases</string>
 </resources>
